--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   <!-- My javascript -->
-  <script type='text/javascript' src={% static 'main.js' %}></script>
+  <script type='text/javascript' src="{% static " run_histos/js/main.js" %}"></script>
 
 </body>
 
