--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,7 +9,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/">
-                    <img src="{% static "home/img/home.svg" %}" width="30" height="30" class="d-inline-block align-top" alt="">
+                    <img src="{% static 'home/img/home.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
                     </a>
                 </li>
                 <li class="nav-item">
@@ -20,6 +20,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Result</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'histogram_file_manager:file_manager' %}">File Manager</a>
                 </li>
               </ul>
         </div>
