--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -3,6 +3,10 @@
 
 {% block head %}
 <script src="{% static 'js/vue.global.js' %}"></script>
+<script src="{% static 'js/axios.min.js' %}"></script>
+<script src="{% static 'js/utils.js' %}"></script>
+<script src="{% static 'histogram_file_manager/js/histogram_file_manager.js' %}"></script>
+<script src="{% static 'histogram_file_manager/js/components/file_table.js' %}"></script>
 {% endblock %}
 
 {% block title %}
@@ -45,10 +49,20 @@ Histogram File Manager
 	{% endif %}
 	<br>
 
-</ul>	
+	<h2>JS-based file list</h2>
+	<div id="app">
+		<file-table :files_information="files_information"></file-table>
+		
+	</div>
+
+	</ul>	
 	
 </div>
 {% endblock %}
 
 {% block scripts %}
+<script>
+ const mountedApp = app.mount('#app');
+</script>
+
 {% endblock %}
