--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -7,6 +7,9 @@
 <script src="{% static 'js/utils.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/histogram_file_manager.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/components/file_table.js' %}"></script>
+<script src="{% static 'histogram_file_manager/js/components/file_actions.js' %}"></script>
+
+<link rel="stylesheet" href="{% static 'histogram_file_manager/css/file_actions.css' %}">
 {% endblock %}
 
 {% block title %}
@@ -51,8 +54,19 @@ Histogram File Manager
 
 	<h2>JS-based file list</h2>
 	<div id="app">
-		<file-table :files_information="files_information"></file-table>
-		
+		<file-table
+			:files_information="files_information"
+			@file-actions-clicked="show_file_actions_modal"
+		>
+		</file-table>
+		<file-actions
+			:file_information="file_information"
+			:is_visible="file_actions_is_visible"
+			:file_id="file_information.id" 
+			@clicked-close="hide_file_actions_modal"
+		>
+			
+		</file-actions>
 	</div>
 
 	</ul>	
