--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Custom CSS -->
-  <link rel='stylesheet' type='text/css' href={% static 'style.css' %}>
+  <link rel='stylesheet' type='text/css' href={% static 'css/style.css' %}>
 
   <!-- Bootstrap CSS -->
   <link 
@@ -23,21 +23,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/css/bootstrap-select.min.css">
 
   <title> {% block title %}Anomaly Detection Playground{% endblock %}</title>
-
-</head>
-
-<body>
-
-  <!-- Navigation -->
-  {% include "menu.html" %}
-
-  <!-- Page Content -->
-  <div class='container base'>
-    {% block content %}
-      content: Oops. You shouldn't be seeing this.
-    {% endblock %}
-  </div>
-
+  
   <!-- Optional JavaScript -->
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -57,8 +43,24 @@
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-  <!-- My javascript -->
-  <script type='text/javascript' src="{% static " run_histos/js/main.js" %}"></script>
+  {% block extra_head %}
+
+  {% endblock %}
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  {% include "menu.html" %}
+
+  <!-- Page Content -->
+  <div class='container base'>
+    {% block content %}
+      content: Oops. You shouldn't be seeing this.
+    {% endblock %}
+  </div>
+
 
 </body>
 
