--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -8,6 +8,7 @@
 <script src="{% static 'histogram_file_manager/js/histogram_file_manager.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/components/file_table.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/components/file_actions.js' %}"></script>
+<script src="{% static 'histogram_file_manager/js/components/table_pagination.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/components/errors.js' %}"></script>
 
 <link rel="stylesheet" href="{% static 'histogram_file_manager/css/file_actions.css' %}">
@@ -53,13 +54,19 @@ Histogram File Manager
 	{% endif %}
 	<br>
 	{% endcomment %}
-	<h2>JS-based file list</h2>
+	<h2>Available Histogram Files</h2>
 	<div id="app">
 		<file-table
 			:files_information="files_information"
 			@file-actions-clicked="show_file_actions_modal"
 		>
 		</file-table>
+		<table-pagination
+			:page_next="page_next"
+						:page_previous="page_previous"
+						@clicked-previous="fetch_previous_result_page"
+						@clicked-next="fetch_next_result_page"			
+		></table-pagination>
 		<file-actions
 			:file_information="file_information"
 			:is_visible="file_actions_is_visible"
