Lots of changes, see changelog

--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -37,7 +37,7 @@
 						Discover
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="{% url 'visualize_histogram:visualize' %}">Visualise histogram</a>
+						<a class="dropdown-item" href="{% url 'visualize_histogram:visualize_histogram_dummy' %}">Visualise histogram</a>
 						<a class="dropdown-item" href="{% url 'histograms:run-histograms-view' %}">Run Histograms</a>
 						<a class="dropdown-item" href="#">Movie</a>
 						<!--<hr class="dropdown-divider">-->
