--- a/visualize_histogram/templates/visualize_histogram/visualize_histogram.html
+++ b/visualize_histogram/templates/visualize_histogram/visualize_histogram.html
@@ -11,36 +11,72 @@ Visualize histograms
 {% endblock %}
 
 {% block maincontent %}
-<div id="hist-id-12345" style="height: auto">
+{% if data %}
+<div id="histogram-show" style="height: auto">
     <script>
-        var x = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 1.0, 3.0, 1.0, 9.0, 26.0, 68.0, 87.0, 161.0, 303.0, 589.0, 1056.0, 1702.0, 2509.0, 3273.0, 3827.0, 4188.0, 4116.0, 3921.0, 3547.0, 3150.0, 2639.0, 2426.0, 1975.0, 1671.0, 1496.0, 1261.0, 1160.0, 979.0, 816.0, 763.0, 719.0, 658.0, 607.0, 527.0, 501.0, 449.0, 433.0, 369.0, 370.0, 338.0, 319.0, 316.0, 266.0, 239.0, 226.0, 233.0, 233.0, 200.0, 175.0, 182.0, 160.0, 137.0, 157.0, 128.0, 134.0, 96.0, 99.0, 106.0, 97.0, 86.0, 84.0, 91.0, 72.0, 67.0, 63.0, 65.0, 70.0, 70.0, 54.0, 60.0, 65.0, 47.0, 60.0, 38.0, 55.0, 35.0, 52.0, 38.0, 39.0, 26.0, 37.0, 30.0, 23.0, 21.0, 30.0, 16.0, 18.0, 15.0, 26.0, 17.0, 15.0, 14.0, 710.0];
         var trace = {
-            y: x,
+            x: {{ bins }},
+            y: {{ data }},
             type: 'bar'
         };
         var data = [trace];
 
-        Plotly.newPlot('hist-id-12345', data, 
+        Plotly.newPlot('histogram-show', data, 
         {
             bargap: 0, 
             paper_bgcolor: 'rgba(0,0,0,0)',
             plot_bgcolor: 'rgba(0,0,0,0)',
             title: {
-                text:'Run 297178',
+                text:'{{ title }}<br>Run {{ runnr }}, lumisection {{ lumisection }}',
                 xref: 'paper',
-                x: 0,
-                font: {
-                    size: 40
-                }
+                x: 0
             }
         }, {responsive: true});
     </script>
 </div>
+{% elif data2d %}
+<div id="histogram-show" style="height: 700px">
+    <script>
+        var data = [
+            {
+                z: {{ data2d }},
+                x: {{ xbins }},
+                y: {{ ybins }},
+                type: 'heatmap',
+                colorscale: 'Viridis'
+            }
+        ];
+
+        Plotly.newPlot('histogram-show', data, 
+        {
+            paper_bgcolor: 'rgba(0,0,0,0)',
+            plot_bgcolor: 'rgba(0,0,0,0)',
+            title: {
+                text:'{{ title }}<br>Run {{ runnr }}, lumisection {{ lumisection }}',
+                xref: 'paper',
+                x: 0
+            }
+        });
+    </script>
+</div>
+{% else %}
+<div class="alert alert-danger">
+    <h2>No histogram found.</h2>
+    Check the spelling of the above URL and try again. Based on the URL, here are the queries you have requested:
+    <ol>
+        <li>Run: {{ runnr }}</li>
+        <li>Lumisection: {{ lumisection }}</li>
+        <li>Title: {{ title }}</li>
+    </ol>
+</div>
+{% endif %}
 {% endblock %}
 
 {% block sidebar %}
 <h2>More from OMS</h2>
-This is a dummy content showing a rough design of the visualization page. 
+<a class="nav-link" href="https://cmsoms.cern.ch/cms/runs/report?cms_run={{runnr}}">Run {{runnr}}</a>
+<a class="nav-link" href="https://cmsoms.cern.ch/cms/triggers/l1_rates?cms_run={{runnr}}">L1 rates from run {{runnr}}</a>
+<a class="nav-link" href="https://cmsoms.cern.ch/cms/triggers/hlt_trigger_rates?cms_run={{runnr}}">HLT rates from run {{runnr}}</a>
 
 {% endblock %}
 
