--- a/histograms/templates/histograms/filter_lumisections_2d.html
+++ b/histograms/templates/histograms/filter_lumisections_2d.html
@@ -56,10 +56,10 @@
     </div>
 
     <div class="d-grid" style="margin-top: 5pt">
-        <button type="submit" id="id_btn_filter" class="btn btn-primary">
+        <button type="submit" id="id_btn_filter" class="btn btn-primary" style="margin-top: 5pt">
             Filter
         </button>
-        <a href="{% url 'histograms:lumisections_2D_list' %}" class="btn btn-danger" id="clear-filters">
+        <a href="{% url 'histograms:lumisections_2D_list' %}" class="btn btn-danger" id="clear-filters" style="margin-top: 5pt">
             Reset
         </a>
     </div>
