--- a/histograms/templates/histograms/filter_lumisections_1d.html
+++ b/histograms/templates/histograms/filter_lumisections_1d.html
@@ -55,11 +55,11 @@
         {% render_field filter.form.title %}
     </div>
 
-    <div class="d-grid" style="margin-top: 5pt">
-        <button type="submit" id="id_btn_filter" class="btn btn-primary">
+    <div class="d-grid">
+        <button type="submit" id="id_btn_filter" class="btn btn-primary" style="margin-top: 5pt">
             Filter
         </button>
-        <a href="{% url 'histograms:lumisections_2D_list' %}" class="btn btn-danger" id="clear-filters">
+        <a href="{% url 'histograms:lumisections_2D_list' %}" class="btn btn-danger" id="clear-filters" style="margin-top: 5pt">
             Reset
         </a>
     </div>
