--- a/common/static/css/style.css
+++ b/common/static/css/style.css
@@ -3,7 +3,18 @@
   background-color: rgb(150, 245, 245);
 }
 
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 999;
+  backdrop-filter: blur(10px);
+  background-color: rgba(22, 22, 23, .8);
+}
+
 .container-main-page{
   margin: 20px;
   padding: 20px;
+  margin-top: 60px;
 }
