--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Custom CSS -->
-    <link rel='stylesheet' type='text/css' href={% static 'css/style.css' %}>
 
     <!-- Bootstrap CSS 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
@@ -31,6 +29,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+    <!-- Custom CSS -->
+    <link rel='stylesheet' type='text/css' href={% static 'css/style.css' %}>
 
 
     <!-- Altair -->
@@ -57,7 +58,7 @@
       {% include "navbar_top.html" %}
 
       <!-- Page Content -->
-      <div class='container-fluid container-main-page'>
+      <div class='container-main-page'>
         {% block content %}
           Default Bootstrap Container.
         {% endblock %}
