--- a/histograms/templates/histograms/listLumisectionHistos1D.html
+++ b/histograms/templates/histograms/listLumisectionHistos1D.html
@@ -24,7 +24,7 @@ lumisection 1D histograms
         <div class="col-lg-9 col-12">
             {% if lumisectionHistos1D_table %}
             <!-- div class="overflow-auto scrollbar border-light shadow m-1 bg-white" id="style-1"-->
-            <div class="overflow-auto px-3" id="style-1">
+            <div class="overflow-auto" id="style-1">
                 {% render_table lumisectionHistos1D_table 'histograms/bootstrap.html' %}
             </div>
             {% else %}
