--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -1,13 +1,13 @@
 {% load static %}
 <!--<nav class="navbar navbar-expand-lg px-4" style="background-color: #cdd6ed;">-->
-<nav class="navbar navbar-expand-lg px-4 navbar-dark">
+<nav class="navbar fixed-top navbar-expand-lg px-4 navbar-dark">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="/">
 			<img src="{% static 'img/favicon.png' %}" width="30" height="30" alt="" title="My Little Playground">
 			DQM Playground
 		</a>
 
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" data-bs-theme="dark">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
