--- a/visualize_histogram/templates/visualize_histogram/visualize_histogram.html
+++ b/visualize_histogram/templates/visualize_histogram/visualize_histogram.html
@@ -12,6 +12,7 @@
 
 {% block maincontent %}
 {% if data %}
+<i class="bi bi-arrow-left"></i> <a href="{% url 'data_taking_objects:run-view' run_number=runnr %}">Run {{ runnr }}</a>, <a href="{% url 'data_taking_objects:lumisection-view' run_number=runnr lumi_number=lumisection %}">lumisection {{ lumisection }}</a>
 <div id="histogram-show" style="height: 80vh;">
     <script>
         var trace = {
@@ -36,6 +37,7 @@
     </script>
 </div>
 {% elif data2d %}
+<i class="bi bi-arrow-left"></i> <a href="{% url 'data_taking_objects:run-view' run_number=runnr %}">Run {{ runnr }}</a>, <a href="{% url 'data_taking_objects:lumisection-view' run_number=runnr lumi_number=lumisection %}">lumisection {{ lumisection }}</a>
 <div id="histogram-show" style="height: 80vh;">
     <script>
         var data = [
@@ -69,6 +71,7 @@
         {% if lumisection %}<li>Lumisection: <code>{{lumisection}}</code></li>{% endif %}
         <li>Title: <code>{{title}}</code></li>
     </ol>
+    <a class="btn btn-primary" href="{% url 'visualize_histogram:visualize_histogram_dummy' %}"><i class="bi bi-arrow-left"></i> Go back</a>
 </div>
 {% endif %}
 {% endblock %}
